kube/namespace.yaml
#kubectl create namespace development
apiVersion: v1 
kind: Namespace
metadata:
  name: development
