kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ari
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-ari
  template:
    metadata:
      labels:
        app: nginx-ari
    spec:
      containers:
      - name: nginx-ari
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
