kube/pod-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    environment: development
    app: frontend
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
