kube/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefullset
spec:
  selector:
    matchLabels:
      app: nginx-ari
  serviceName: nginx-ari-statefull-svc
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-ari
    spec:
      containers:
      - name: nginx-ari
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
