kube/hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ari
  labels:
    name: nginx-ari
spec:
  selector:
    matchLabels:
      name: nginx-ari
  template:
    metadata:
      name: nginx-ari
      labels:
        name: nginx-ari
    spec:
      containers:
        - name: nginx-ari
          image: nginx
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-ari
spec:
  type: NodePort
  selector:
    name: nginx-ari
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
