kube/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    environment: development
    app: frontend
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
