kube/ingress-payment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-payment
  namespace: default
  labels:
    name: nginx-payment
spec:
  rules:
  - host: cilsy.id
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /payment
        backend:
          service:
            name: nginx-payment
            port: 
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-payment
  labels:
    name: nginx-payment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-payment
  template:
    metadata:
      labels:
        app: nginx-payment
    spec:
      containers:
      - name: nginx-payment
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-payment
  namespace: default
spec:
  selector:
    name: nginx-payment
  ports:
  - port: 80
    targetPort: 80
